# goit-ds--w-02

./: connect.py  select.py  test.db  test.sqlite
Practicalwork/: fill_data.py  pyproject.toml  salary.db  salary.sql  select_first.py  select_second.py  select_third.py
